--- a/styles.css
+++ b/styles.css
@@ -40,15 +40,17 @@ main {
 }
 
 .button {
-    background-color: #007bff;
+    background-color: #bd3e0c;
     color: white;
     text-decoration: none;
     padding: 0.5rem 1rem;
     border-radius: 4px;
+    transition-duration: 0.5s;
 }
 
 .button:hover {
-    background-color: #0056b3;
+    background-color: white;
+    color: #bd3e0c;
 }
 
 footer {
