--- a/Logitech/styles.css
+++ b/Logitech/styles.css
@@ -1,3 +1,8 @@
+@font-face {
+    font-family: 'Cyber';
+    src: url("../font/CyberGloom.ttf");
+}
+
 body {
     font-family: Arial, sans-serif;
     margin: 0;
@@ -12,8 +17,10 @@ main {
 header {
     color: white;
     background-color: rgb(33, 33, 33);
-    padding: 1rem;
+    padding: 1rem; 
     text-align: center;
+    font-family: 'Cyber';
+    font-size: 30px;
 }
 
 .button {
